--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,23 @@
 name: aerocast
-description: A weather app.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: A waether app.
+
+# Prevent accidental publishing to pub.dev.
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  flutter_dotenv: ^5.1.0
   flutter_localizations:
     sdk: flutter
   google_fonts:  ^5.0.0
   intl: ^0.18.0
+  json_annotation: ^4.8.1
   shared_preferences: ^2.1.0
   provider: ^6.0.5
 
@@ -22,13 +25,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.4
+  json_serializable: ^6.7.0
   flutter_launcher_icons: ^0.13.1
+
 
 flutter:
   uses-material-design: true
   generate: true
   assets:
     - assets/images/
+    - .env
     
 flutter_icons:
   android: true
